--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -480,3 +480,9 @@ ul {
     margin-bottom: 2rem;
     text-align: center;
 }
+
+
+/* .doctorcard {
+    margin-bottom: 20px;
+    max-height: 100px;
+} */
