--- a/css/pharmacie.css
+++ b/css/pharmacie.css
@@ -346,10 +346,90 @@
         -ms-user-select: none;
         user-select: none;
         background-color: transparent;
-        border: 1px solid transparent;
+        border: 1px solid #009ffb;
         padding: 0.375rem 0.75rem;
         font-size: 1rem;
         line-height: 1.5;
         border-radius: 0.25rem;
         transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     }
+    /*******Hany*********/
+    /* -------start section2-------------- */
+    
+    .section2 {
+        width: 100%;
+        padding-top: 50px;
+        margin-bottom: 20px;
+    }
+    
+    .section2 h3 {
+        text-align: center;
+        padding: 40px 0px;
+        background-color: var(--blue-color);
+        font-weight: 500;
+        font-size: 35px;
+        color: white;
+    }
+    
+    .section2 .sec2 {
+        width: 100%;
+    }
+    
+    .section2 .child2 i {
+        font-size: 40px;
+        padding-bottom: 7px;
+        color: var(--blue-color);
+    }
+    
+    .section2 .child2 {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 20px;
+        gap: 30px;
+        justify-content: center;
+    }
+    
+    .section2 .child2 div {
+        width: 22%;
+        padding: 20px;
+        text-align: center;
+        box-shadow: 2px 1px 6px 0px var(--blue-alt-color);
+    }
+    
+    @media (max-width: 1024px) {
+        .section2 .child2 div {
+            width: 45%;
+        }
+    }
+    
+    @media (max-width: 992px) {
+        .section2 .child2 div {
+            width: 40%;
+        }
+        .section2 h3 {
+            text-align: center;
+            padding: 40px 0px;
+            background-color: var(--blue-color);
+            font-weight: 400;
+            font-size: 20px;
+            color: white;
+        }
+        .section2 .child2 div {
+            font-size: 14px;
+        }
+    }
+    
+    @media (max-width: 768px) {
+        .section2 .child2 div {
+            width: 100%;
+        }
+        .section2 h3 {
+            text-align: center;
+            padding: 40px 0px;
+            background-color: var(--blue-color);
+            font-weight: 300;
+            font-size: 15px;
+            color: white;
+        }
+    }
+    /*******Hany*********/
